src/antlr/lambda/LambdaParser.ts
// Generated from src/antlr/lambda/Lambda.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { LambdaListener } from "./LambdaListener.js";
import { LambdaVisitor } from "./LambdaVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class LambdaParser extends antlr.Parser {
    public static readonly LET = 1;
    public static readonly IN = 2;
    public static readonly CASE = 3;
    public static readonly OF = 4;
    public static readonly INL = 5;
    public static readonly INTR = 6;
    public static readonly AS = 7;
    public static readonly LAMBDA = 8;
    public static readonly ARROW = 9;
    public static readonly FATARROW = 10;
    public static readonly TIMES = 11;
    public static readonly PLUS = 12;
    public static readonly ASSIGN = 13;
    public static readonly COLON = 14;
    public static readonly DOT = 15;
    public static readonly BAR = 16;
    public static readonly COMMA = 17;
    public static readonly LPAREN = 18;
    public static readonly RPAREN = 19;
    public static readonly LBRACK = 20;
    public static readonly RBRACK = 21;
    public static readonly LANGLE = 22;
    public static readonly RANGLE = 23;
    public static readonly TYPEID = 24;
    public static readonly VAR = 25;
    public static readonly WS = 26;
    public static readonly LINE_COMMENT = 27;
    public static readonly BLOCK_COMMENT = 28;
    public static readonly RULE_program = 0;
    public static readonly RULE_term = 1;
    public static readonly RULE_lamExpr = 2;
    public static readonly RULE_letExpr = 3;
    public static readonly RULE_letPairExpr = 4;
    public static readonly RULE_letDependentPairExpr = 5;
    public static readonly RULE_caseExpr = 6;
    public static readonly RULE_appExpr = 7;
    public static readonly RULE_atom = 8;
    public static readonly RULE_type = 9;
    public static readonly RULE_sumType = 10;
    public static readonly RULE_prodType = 11;
    public static readonly RULE_atomicType = 12;
    public static readonly RULE_predicateType = 13;
    public static readonly RULE_typeList = 14;

    public static readonly literalNames = [
        null, "'let'", "'in'", "'case'", "'of'", "'inl'", "'inr'", "'as'", 
        null, null, null, null, null, "'='", "':'", "'.'", "'|'", "','", 
        "'('", "')'", "'['", "']'"
    ];

    public static readonly symbolicNames = [
        null, "LET", "IN", "CASE", "OF", "INL", "INTR", "AS", "LAMBDA", 
        "ARROW", "FATARROW", "TIMES", "PLUS", "ASSIGN", "COLON", "DOT", 
        "BAR", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LANGLE", 
        "RANGLE", "TYPEID", "VAR", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "term", "lamExpr", "letExpr", "letPairExpr", "letDependentPairExpr", 
        "caseExpr", "appExpr", "atom", "type", "sumType", "prodType", "atomicType", 
        "predicateType", "typeList",
    ];

    public get grammarFileName(): string { return "Lambda.g4"; }
    public get literalNames(): (string | null)[] { return LambdaParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return LambdaParser.symbolicNames; }
    public get ruleNames(): string[] { return LambdaParser.ruleNames; }
    public get serializedATN(): number[] { return LambdaParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, LambdaParser._ATN, LambdaParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, LambdaParser.RULE_program);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 30;
            this.term();
            this.state = 31;
            this.match(LambdaParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public term(): TermContext {
        let localContext = new TermContext(this.context, this.state);
        this.enterRule(localContext, 2, LambdaParser.RULE_term);
        try {
            this.state = 39;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 33;
                this.lamExpr();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 34;
                this.letDependentPairExpr();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 35;
                this.letPairExpr();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 36;
                this.letExpr();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 37;
                this.caseExpr();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 38;
                this.appExpr();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public lamExpr(): LamExprContext {
        let localContext = new LamExprContext(this.context, this.state);
        this.enterRule(localContext, 4, LambdaParser.RULE_lamExpr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 41;
            this.match(LambdaParser.LAMBDA);
            this.state = 42;
            this.match(LambdaParser.VAR);
            this.state = 43;
            this.match(LambdaParser.COLON);
            this.state = 44;
            this.type_();
            this.state = 45;
            this.match(LambdaParser.DOT);
            this.state = 46;
            this.term();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letExpr(): LetExprContext {
        let localContext = new LetExprContext(this.context, this.state);
        this.enterRule(localContext, 6, LambdaParser.RULE_letExpr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 48;
            this.match(LambdaParser.LET);
            this.state = 49;
            this.match(LambdaParser.VAR);
            this.state = 50;
            this.match(LambdaParser.ASSIGN);
            this.state = 51;
            this.term();
            this.state = 52;
            this.match(LambdaParser.IN);
            this.state = 53;
            this.term();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letPairExpr(): LetPairExprContext {
        let localContext = new LetPairExprContext(this.context, this.state);
        this.enterRule(localContext, 8, LambdaParser.RULE_letPairExpr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 55;
            this.match(LambdaParser.LET);
            this.state = 56;
            this.match(LambdaParser.LBRACK);
            this.state = 57;
            this.match(LambdaParser.VAR);
            this.state = 58;
            this.match(LambdaParser.COMMA);
            this.state = 59;
            this.match(LambdaParser.VAR);
            this.state = 60;
            this.match(LambdaParser.RBRACK);
            this.state = 61;
            this.match(LambdaParser.ASSIGN);
            this.state = 62;
            this.term();
            this.state = 63;
            this.match(LambdaParser.IN);
            this.state = 64;
            this.term();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letDependentPairExpr(): LetDependentPairExprContext {
        let localContext = new LetDependentPairExprContext(this.context, this.state);
        this.enterRule(localContext, 10, LambdaParser.RULE_letDependentPairExpr);
        let _la: number;
        try {
            this.state = 104;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 66;
                this.match(LambdaParser.LET);
                this.state = 67;
                this.match(LambdaParser.LANGLE);
                this.state = 68;
                this.match(LambdaParser.VAR);
                this.state = 71;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 69;
                    this.match(LambdaParser.COLON);
                    this.state = 70;
                    this.type_();
                    }
                }

                this.state = 73;
                this.match(LambdaParser.COMMA);
                this.state = 74;
                this.match(LambdaParser.VAR);
                this.state = 77;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 75;
                    this.match(LambdaParser.COLON);
                    this.state = 76;
                    this.type_();
                    }
                }

                this.state = 79;
                this.match(LambdaParser.RANGLE);
                this.state = 80;
                this.match(LambdaParser.ASSIGN);
                this.state = 81;
                this.term();
                this.state = 82;
                this.match(LambdaParser.IN);
                this.state = 83;
                this.term();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 85;
                this.match(LambdaParser.LET);
                this.state = 86;
                this.match(LambdaParser.LPAREN);
                this.state = 87;
                this.match(LambdaParser.VAR);
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 88;
                    this.match(LambdaParser.COLON);
                    this.state = 89;
                    this.type_();
                    }
                }

                this.state = 92;
                this.match(LambdaParser.COMMA);
                this.state = 93;
                this.match(LambdaParser.VAR);
                this.state = 96;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 94;
                    this.match(LambdaParser.COLON);
                    this.state = 95;
                    this.type_();
                    }
                }

                this.state = 98;
                this.match(LambdaParser.RPAREN);
                this.state = 99;
                this.match(LambdaParser.ASSIGN);
                this.state = 100;
                this.term();
                this.state = 101;
                this.match(LambdaParser.IN);
                this.state = 102;
                this.term();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public caseExpr(): CaseExprContext {
        let localContext = new CaseExprContext(this.context, this.state);
        this.enterRule(localContext, 12, LambdaParser.RULE_caseExpr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 106;
            this.match(LambdaParser.CASE);
            this.state = 107;
            this.term();
            this.state = 108;
            this.match(LambdaParser.OF);
            this.state = 109;
            this.match(LambdaParser.INL);
            this.state = 110;
            this.match(LambdaParser.VAR);
            this.state = 111;
            this.match(LambdaParser.COLON);
            this.state = 112;
            this.type_();
            this.state = 113;
            this.match(LambdaParser.FATARROW);
            this.state = 114;
            this.term();
            this.state = 115;
            this.match(LambdaParser.BAR);
            this.state = 116;
            this.match(LambdaParser.INTR);
            this.state = 117;
            this.match(LambdaParser.VAR);
            this.state = 118;
            this.match(LambdaParser.COLON);
            this.state = 119;
            this.type_();
            this.state = 120;
            this.match(LambdaParser.FATARROW);
            this.state = 121;
            this.term();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public appExpr(): AppExprContext {
        let localContext = new AppExprContext(this.context, this.state);
        this.enterRule(localContext, 14, LambdaParser.RULE_appExpr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 124;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 123;
                this.atom();
                }
                }
                this.state = 126;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 38010976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public atom(): AtomContext {
        let localContext = new AtomContext(this.context, this.state);
        this.enterRule(localContext, 16, LambdaParser.RULE_atom);
        let _la: number;
        try {
            this.state = 163;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 128;
                this.match(LambdaParser.VAR);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 129;
                this.match(LambdaParser.LPAREN);
                this.state = 130;
                this.term();
                this.state = 131;
                this.match(LambdaParser.RPAREN);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 133;
                this.match(LambdaParser.LPAREN);
                this.state = 134;
                this.term();
                this.state = 135;
                this.match(LambdaParser.COMMA);
                this.state = 136;
                this.term();
                this.state = 137;
                this.match(LambdaParser.RPAREN);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 139;
                this.match(LambdaParser.LANGLE);
                this.state = 140;
                this.term();
                this.state = 143;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 141;
                    this.match(LambdaParser.COLON);
                    this.state = 142;
                    this.type_();
                    }
                }

                this.state = 145;
                this.match(LambdaParser.COMMA);
                this.state = 146;
                this.term();
                this.state = 149;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 14) {
                    {
                    this.state = 147;
                    this.match(LambdaParser.COLON);
                    this.state = 148;
                    this.type_();
                    }
                }

                this.state = 151;
                this.match(LambdaParser.RANGLE);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 153;
                this.match(LambdaParser.INL);
                this.state = 154;
                this.atom();
                this.state = 155;
                this.match(LambdaParser.AS);
                this.state = 156;
                this.type_();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 158;
                this.match(LambdaParser.INTR);
                this.state = 159;
                this.atom();
                this.state = 160;
                this.match(LambdaParser.AS);
                this.state = 161;
                this.type_();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_(): TypeContext {
        let localContext = new TypeContext(this.context, this.state);
        this.enterRule(localContext, 18, LambdaParser.RULE_type);
        let _la: number;
        try {
            this.state = 178;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 165;
                this.match(LambdaParser.LPAREN);
                this.state = 166;
                this.match(LambdaParser.VAR);
                this.state = 167;
                this.match(LambdaParser.COLON);
                this.state = 168;
                this.type_();
                this.state = 169;
                this.match(LambdaParser.RPAREN);
                this.state = 170;
                this.match(LambdaParser.ARROW);
                this.state = 171;
                this.type_();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 173;
                this.sumType();
                this.state = 176;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 9) {
                    {
                    this.state = 174;
                    this.match(LambdaParser.ARROW);
                    this.state = 175;
                    this.type_();
                    }
                }

                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sumType(): SumTypeContext {
        let localContext = new SumTypeContext(this.context, this.state);
        this.enterRule(localContext, 20, LambdaParser.RULE_sumType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 180;
            this.prodType();
            this.state = 185;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 12) {
                {
                {
                this.state = 181;
                this.match(LambdaParser.PLUS);
                this.state = 182;
                this.prodType();
                }
                }
                this.state = 187;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public prodType(): ProdTypeContext {
        let localContext = new ProdTypeContext(this.context, this.state);
        this.enterRule(localContext, 22, LambdaParser.RULE_prodType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.atomicType();
            this.state = 193;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 11) {
                {
                {
                this.state = 189;
                this.match(LambdaParser.TIMES);
                this.state = 190;
                this.atomicType();
                }
                }
                this.state = 195;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public atomicType(): AtomicTypeContext {
        let localContext = new AtomicTypeContext(this.context, this.state);
        this.enterRule(localContext, 24, LambdaParser.RULE_atomicType);
        try {
            this.state = 203;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 14, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 196;
                this.match(LambdaParser.TYPEID);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 197;
                this.match(LambdaParser.VAR);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 198;
                this.predicateType();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 199;
                this.match(LambdaParser.LPAREN);
                this.state = 200;
                this.type_();
                this.state = 201;
                this.match(LambdaParser.RPAREN);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public predicateType(): PredicateTypeContext {
        let localContext = new PredicateTypeContext(this.context, this.state);
        this.enterRule(localContext, 26, LambdaParser.RULE_predicateType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 205;
            this.match(LambdaParser.TYPEID);
            this.state = 206;
            this.match(LambdaParser.LPAREN);
            this.state = 208;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 50593792) !== 0)) {
                {
                this.state = 207;
                this.typeList();
                }
            }

            this.state = 210;
            this.match(LambdaParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typeList(): TypeListContext {
        let localContext = new TypeListContext(this.context, this.state);
        this.enterRule(localContext, 28, LambdaParser.RULE_typeList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 212;
            this.type_();
            this.state = 217;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 17) {
                {
                {
                this.state = 213;
                this.match(LambdaParser.COMMA);
                this.state = 214;
                this.type_();
                }
                }
                this.state = 219;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!LambdaParser.__ATN) {
            LambdaParser.__ATN = new antlr.ATNDeserializer().deserialize(LambdaParser._serializedATN);
        }

        return LambdaParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(LambdaParser.literalNames, LambdaParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return LambdaParser.vocabulary;
    }

    private static readonly decisionsToDFA = LambdaParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public term(): TermContext {
        return this.getRuleContext(0, TermContext)!;
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(LambdaParser.EOF, 0)!;
    }
    public override get ruleIndex(): number {
        return LambdaParser.RULE_program;
    }
    public override enterRule(listener: LambdaListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: LambdaListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: LambdaVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class TermContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public lamExpr(): LamExprContext | null {
        return this.getRuleContext(0, LamExprContext);
    }
    public letDependentPairExpr(): LetDependentPairExprContext | null {
        return this.getRuleContext(0, LetDependentPairExprContext);
    }
    public letPairExpr(): LetPairExprContext | null {
        return this.getRuleContext(0, LetPairExprContext);
    }
    public letExpr(): LetExprContext | null {
        return this.getRuleContext(0, LetExprContext);
    }
    public caseExpr(): CaseExprContext | null {
        return this.getRuleContext(0, CaseExprContext);
    }
    public appExpr(): AppExprContext | null {
        return this.getRuleContext(0, AppExprContext);
    }
    public override get ruleIndex(): number {
        return LambdaParser.RULE_term;
    }
    public override enterRule(listener: LambdaListener): void {
        if(listener.enterTerm) {
             listener.enterTerm(this);
        }
    }
    public override exitRule(listener: LambdaListener): void {
        if(listener.exitTerm) {
             listener.exitTerm(this);
        }
    }
    public override accept<Result>(visitor: LambdaVisitor<Result>): Result | null {
        if (visitor.visitTerm) {
            return visitor.visitTerm(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class LamExprContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public LAMBDA(): antlr.TerminalNode {
        return this.getToken(LambdaParser.LAMBDA, 0)!;
    }
    public VAR(): antlr.TerminalNode {
        return this.getToken(LambdaParser.VAR, 0)!;
    }
    public COLON(): antlr.TerminalNode {
        return this.getToken(LambdaParser.COLON, 0)!;
    }
    public type(): TypeContext {
        return this.getRuleContext(0, TypeContext)!;
    }
    public DOT(): antlr.TerminalNode {
        return this.getToken(LambdaParser.DOT, 0)!;
    }
    public term(): TermContext {
        return this.getRuleContext(0, TermContext)!;
    }
    public override get ruleIndex(): number {
        return LambdaParser.RULE_lamExpr;
    }
    public override enterRule(listener: LambdaListener): void {
        if(listener.enterLamExpr) {
             listener.enterLamExpr(this);
        }
    }
    public override exitRule(listener: LambdaListener): void {
        if(listener.exitLamExpr) {
             listener.exitLamExpr(this);
        }
    }
    public override accept<Result>(visitor: LambdaVisitor<Result>): Result | null {
        if (visitor.visitLamExpr) {
            return visitor.visitLamExpr(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class LetExprContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public LET(): antlr.TerminalNode {
        return this.getToken(LambdaParser.LET, 0)!;
    }
    public VAR(): antlr.TerminalNode {
        return this.getToken(LambdaParser.VAR, 0)!;
    }
    public ASSIGN(): antlr.TerminalNode {
        return this.getToken(LambdaParser.ASSIGN, 0)!;
    }
    public term(): TermContext[];
    public term(i: number): TermContext | null;
    public term(i?: number): TermContext[] | TermContext | null {
        if (i === undefined) {
            return this.getRuleContexts(TermContext);
        }

        return this.getRuleContext(i, TermContext);
    }
    public IN(): antlr.TerminalNode {
        return this.getToken(LambdaParser.IN, 0)!;
    }
    public override get ruleIndex(): number {
        return LambdaParser.RULE_letExpr;
    }
    public override enterRule(listener: LambdaListener): void {
        if(listener.enterLetExpr) {
             listener.enterLetExpr(this);
        }
    }
    public override exitRule(listener: LambdaListener): void {
        if(listener.exitLetExpr) {
             listener.exitLetExpr(this);
        }
    }
    public override accept<Result>(visitor: LambdaVisitor<Result>): Result | null {
        if (visitor.visitLetExpr) {
            return visitor.visitLetExpr(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class LetPairExprContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public LET(): antlr.TerminalNode {
        return this.getToken(LambdaParser.LET, 0)!;
    }
    public LBRACK(): antlr.TerminalNode {
        return this.getToken(LambdaParser.LBRACK, 0)!;
    }
    public VAR(): antlr.TerminalNode[];
    public VAR(i: number): antlr.TerminalNode | null;
    public VAR(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LambdaParser.VAR);
    	} else {
    		return this.getToken(LambdaParser.VAR, i);
    	}
    }
    public COMMA(): antlr.TerminalNode {
        return this.getToken(LambdaParser.COMMA, 0)!;
    }
    public RBRACK(): antlr.TerminalNode {
        return this.getToken(LambdaParser.RBRACK, 0)!;
    }
    public ASSIGN(): antlr.TerminalNode {
        return this.getToken(LambdaParser.ASSIGN, 0)!;
    }
    public term(): TermContext[];
    public term(i: number): TermContext | null;
    public term(i?: number): TermContext[] | TermContext | null {
        if (i === undefined) {
            return this.getRuleContexts(TermContext);
        }
